--- a/Chaining search.ipynb
+++ b/Chaining search.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-08T14:23:23.808462Z",
@@ -34,14 +34,16 @@
    "source": [
     "from nltk.tag.perceptron import PerceptronTagger\n",
     "\n",
-    "def filter_df(df, column, method, regex_or_set):\n",
+    "def filter_condition(df, column, method, regex_or_set):\n",
     "    '''\n",
-    "    Return a Pandas DataFrame filtered according to a set of parameters\n",
+    "    Helpfunction to build some condition to filter a Pandas DataFrame, according to a set of parameters\n",
     "    Args:\n",
     "        df: Pandas DataFrame to filter on\n",
     "        df: column on which we filter\n",
     "        method: \"contains_regex\" of \"isin_set\"\n",
     "        regex_or_set: Regular expression (if method==\"contains_regex\") or set (if method==\"isin_set\")\n",
+    "    Returns:\n",
+    "        a condition\n",
     "    '''\n",
     "    \n",
     "    if method==\"contains_regex\":\n",
@@ -50,9 +52,9 @@
     "        filter_condition = df[column].isin(regex_or_set)\n",
     "    else:\n",
     "        raise ValueError(\"method should be one of regex or isin\")\n",
-    "    return df[filter_condition]\n",
+    "    return filter_condition\n",
     "    \n",
-    "\n",
+    "    \n",
     "\n",
     "def concat_df(df_arr, keys_arr=None):\n",
     "    '''\n",
@@ -93,7 +95,7 @@
     "    \n",
     "    # ref: https://pandas.pydata.org/pandas-docs/stable/user_guide/merging.html\n",
     "    \n",
-    "    if join is None:\n",
+    "    if join_type is None:\n",
     "        concat_df = pd.concat( df_arr, axis=1 )\n",
     "    else:\n",
     "        concat_df = pd.concat( df_arr, axis=1, join=join_type )\n",
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-08T15:42:14.160612Z",
@@ -245,6 +247,8 @@
     "        corpus: a corpus name\n",
     "        start_position: (optional) corpus response page (usually used by the function automatically calling itself recursively)\n",
     "        detailed_context: (optional) {True, False (default)} \n",
+    "        extra_fields_doc: \n",
+    "        extra_fields_token: \n",
     "    Returns:\n",
     "        a Pandas DataFrame containing corpus data\n",
     "        \n",
@@ -406,6 +410,8 @@
     "    Args:\n",
     "        text: the XML response of a lexicon/corpus search, as a string\n",
     "        detailed_context: (optional) True to parse the layers of all tokens, False to limit detailed parsing to hits\n",
+    "        extra_fields_doc: \n",
+    "        extra_fields_token: \n",
     "    Returns:\n",
     "        df: a Pandas DataFrame representing the parse results\n",
     "        next_pos: the next result page to be parsed (since the results might be spread among several XML response pages), \n",
@@ -451,6 +457,7 @@
     "            # gather info about each hit (=hits only mode) or about each word (=NOT hits only mode)\n",
     "            \n",
     "            # Get lemma of each hit\n",
+    "            cols= []\n",
     "            if (dataView.get(\"type\")==\"application/x-clarin-fcs-adv+xml\"):\n",
     "                hit_layer = defaultdict(list) \n",
     "                for layer in dataView.findall(\".//{http://clarin.eu/fcs/dataview/advanced}Layer\"):\n",
@@ -796,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-08T15:42:17.743540Z",
@@ -1010,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-08T15:42:18.320576Z",
@@ -1578,7 +1585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-04T17:27:48.739501Z",
@@ -1586,22 +1593,7 @@
     },
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e28ea7bed7d247c287f699b52be5b94b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Text(value='boek', description='<b>Word:</b>'), Dropdown(description='<b>Lexicon:</b>', index=2…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#from chaininglib import ui\n",
     "searchWordField, lexiconField = create_lexicon_ui()"
@@ -1799,7 +1791,7 @@
     "\n",
     "# LEXICON: get adjectives having a final -e in definite attributive use\n",
     "print('Filtering lexicon results')\n",
-    "df_lexicon_form_e = filter_df(df_lexicon,column=\"wordform\",method=\"contains_regex\", regex_or_set = 'e$')\n",
+    "df_lexicon_form_e = df_lexicon[ filter_condition(df_lexicon,column=\"wordform\",method=\"contains_regex\", regex_or_set = 'e$') ]\n",
     "#final_e_condition=df_lexicon.wordform.str.contains('e$')\n",
     "#df = df_lexicon[final_e_condition]\n",
     "display(df_lexicon_form_e)\n",
@@ -1809,7 +1801,7 @@
     "e_forms = list(df_lexicon_form_e.lemma)\n",
     "#no_final_e_condition = df_corpus['word 1'].isin(eless_forms)\n",
     "#result_df = df_corpus[no_final_e_condition]\n",
-    "result_df = filter_df(df_corpus, column = \"word 1\", method=\"isin_set\", regex_or_set=e_forms)\n",
+    "result_df = df_corpus[ filter_condition(df_corpus, column = \"word 1\", method=\"isin_set\", regex_or_set=e_forms) ]\n",
     "display( result_df )"
    ]
   },
@@ -1875,7 +1867,7 @@
    },
    "outputs": [],
    "source": [
-    "base_lexicon=\"anw\"\n",
+    "base_lexicon=\"molex\"\n",
     "corpus_to_search1=\"opensonar\"\n",
     "corpus_to_search2=\"chn\"\n",
     "\n",
@@ -1998,30 +1990,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-08T16:29:06.839642Z",
      "start_time": "2019-02-08T16:29:06.410879Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "ParseError",
-     "evalue": "not well-formed (invalid token): line 220, column 14 (<string>)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-      "  File \u001b[1;32m\"/home/peter/git/chaining-search/cs_env/lib/python3.6/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m3267\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \u001b[1;32m\"<ipython-input-12-fdfb7c6ed386>\"\u001b[0m, line \u001b[1;32m4\u001b[0m, in \u001b[1;35m<module>\u001b[0m\n    fields = get_available_metadata(\"corpus\", corpus_name)\n",
-      "  File \u001b[1;32m\"<ipython-input-5-d114531cb278>\"\u001b[0m, line \u001b[1;32m607\u001b[0m, in \u001b[1;35mget_available_metadata\u001b[0m\n    return _corpus_metadata_blacklab(resource_name)\n",
-      "  File \u001b[1;32m\"<ipython-input-5-d114531cb278>\"\u001b[0m, line \u001b[1;32m589\u001b[0m, in \u001b[1;35m_corpus_metadata_blacklab\u001b[0m\n    return _parse_blacklab_metadata(response_text)\n",
-      "  File \u001b[1;32m\"<ipython-input-5-d114531cb278>\"\u001b[0m, line \u001b[1;32m571\u001b[0m, in \u001b[1;35m_parse_blacklab_metadata\u001b[0m\n    root = ET.fromstring(text)\n",
-      "\u001b[0;36m  File \u001b[0;32m\"/usr/lib/python3.6/xml/etree/ElementTree.py\"\u001b[0;36m, line \u001b[0;32m1314\u001b[0;36m, in \u001b[0;35mXML\u001b[0;36m\u001b[0m\n\u001b[0;31m    parser.feed(text)\u001b[0m\n",
-      "\u001b[0;36m  File \u001b[0;32m\"<string>\"\u001b[0;36m, line \u001b[0;32munknown\u001b[0m\n\u001b[0;31mParseError\u001b[0m\u001b[0;31m:\u001b[0m not well-formed (invalid token): line 220, column 14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "corpus_name=\"zeebrieven\"\n",
     "query=r'[lemma=\"boek\"]'\n",
@@ -2029,16 +2005,21 @@
     "fields = get_available_metadata(\"corpus\", corpus_name)\n",
     "# Perform query and ask all metadata\n",
     "df_corpus = search_corpus(query, corpus_name, extra_fields_doc=fields[\"document\"])\n",
-    "print(fields)\n",
+    "\n",
     "# All results\n",
     "display_df(df_corpus, title=\"All results:\")\n",
+    "\n",
     "# Filter on year: > 1700\n",
-    "df_filter_year = df_corpus[df_corpus[\"witnessYear_from\"].astype('int32') > 1700] # TODO: include this in filter_df method?\n",
+    "df_filter_year = df_corpus[df_corpus[\"witnessYear_from\"].astype('int32') > 1700] \n",
     "display_df(df_filter_year, title=\"After 1700:\")\n",
     "\n",
     "# Filter on sender birth place Leiden\n",
-    "df_filter_place = filter_df(df_corpus, column=\"afz_geboorte_plaats\", method=\"contains_regex\", regex_or_set=\"Leiden\")\n",
-    "display_df(df_filter_place, title=\"Sender born in Leiden:\")"
+    "#condition = filter_condition(df_corpus, column=\"afz_geb_plaats\", method=\"contains_regex\", regex_or_set=\"Leiden\")\n",
+    "#df_filter_place = df_corpus[ condition ]\n",
+    "#display_df(df_filter_place, title=\"Sender born in Leiden:\")\n",
+    "\n",
+    "# Group by birth place\n",
+    "display_df(df_corpus.groupby(\"adr_loc_plaats\").size())"
    ]
   },
   {
@@ -2065,7 +2046,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
