New case study about h-dropping; etc

--- a/Chaining search.ipynb
+++ b/Chaining search.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-08T15:42:14.160612Z",
@@ -257,8 +257,8 @@
     "    '''\n",
     "    \n",
     "    # show wait indicator\n",
-    "    #app = wx.App()\n",
-    "    #msg_to_user = wx.BusyInfo('Searching '+corpus+' corpus')\n",
+    "    show_wait_indicator('Searching '+corpus+ ' at page '+str(start_position))    \n",
+    "    \n",
     "    if corpus not in AVAILABLE_CORPORA:\n",
     "        raise ValueError(\"Unknown corpus: \" + corpus)\n",
     "    try:\n",
@@ -271,16 +271,20 @@
     "        # If there are next pages, call search_corpus recursively\n",
     "        #print(next_page)\n",
     "        if next_page > 0:\n",
+    "            remove_wait_indicator()\n",
     "            df_more = search_corpus(query, corpus, next_page, detailed_context, extra_fields_doc, extra_fields_token)\n",
     "            df = df.append(df_more, ignore_index=True)\n",
+    "            \n",
+    "        remove_wait_indicator()\n",
+    "        \n",
     "        # show message out of xml, if some error has occured (prevents empty output)\n",
     "        _show_error_if_any(response_text)\n",
+    "        \n",
     "        return df\n",
     "    except Exception as e:\n",
+    "        remove_wait_indicator()\n",
     "        raise ValueError(\"An error occured when searching corpus \" + corpus + \": \"+ str(e))\n",
-    "    #finally:\n",
-    "    #    # remove wait indicator, and return dataframe\n",
-    "    #    del msg_to_user        \n",
+    "     \n",
     "\n",
     "    \n",
     "    \n",
@@ -328,8 +332,8 @@
     "        \n",
     "    '''\n",
     "     # show wait indicator, so the user knows what's happening\n",
-    "    #app = wx.App()\n",
-    "    #msg_to_user = wx.BusyInfo('Searching '+lexicon+' lexicon')\n",
+    "    show_wait_indicator('Searching '+lexicon)\n",
+    "    \n",
     "    # default endpoint, except when diamant is invoked\n",
     "    endpoint = \"http://172.16.4.56:8890/sparql\"\n",
     "    if (lexicon==\"diamant\"):\n",
@@ -345,14 +349,16 @@
     "        df = pd.read_json(records_string, orient=\"records\")\n",
     "    \n",
     "        # make sure cells containing NULL are added too, otherwise we'll end up with ill-formed data\n",
-    "        df = df.fillna('')\n",
-    "        # df = df.applymap(lambda x: '' if pd.isnull(x) else x[\"value\"])         \n",
+    "        # CAUSES MALFUNCTION: df = df.fillna('')\n",
+    "        df = df.applymap(lambda x: '' if pd.isnull(x) else x[\"value\"])         \n",
+    "        \n",
+    "        # remove wait indicator, \n",
+    "        remove_wait_indicator()\n",
+    "        \n",
     "        return df\n",
     "    except Exception as e:\n",
-    "        raise ValueError(\"An error occured when searching lexicon \" + lexicon + \": \"+ str(e))\n",
-    "    #finally:\n",
-    "    #    # remove wait indicator, \n",
-    "    #    del msg_to_user\n",
+    "        remove_wait_indicator()\n",
+    "        raise ValueError(\"An error occured when searching lexicon \" + lexicon + \": \"+ str(e))          \n",
     "        \n",
     "\n",
     "# Processing methods\n",
@@ -423,6 +429,7 @@
     "    records = []\n",
     "    n_tokens = 0\n",
     "    computed_nt = False\n",
+    "    cols= []\n",
     "    \n",
     "    fields_token = DEFAULT_FIELDS_TOKEN + extra_fields_token\n",
     "    fields_doc = DEFAULT_FIELDS_DOC + extra_fields_doc\n",
@@ -586,6 +593,8 @@
     "    >>> display(df_frequency_list)\n",
     "    '''\n",
     "    \n",
+    "    print('Beware: building a frequency list can take a long time')\n",
+    "    \n",
     "    # LEXICON: get a lemmata list to work with\n",
     "    df_lexicon = search_lexicon_alllemmata(lexicon, pos)\n",
     "    lexicon_lemmata_set = sorted( set([w.lower() for w in df_lexicon[\"writtenForm\"]]) )\n",
@@ -640,6 +649,8 @@
     "    >>> df = get_missing_wordforms(\"molex\", \"VERB\", \"opensonar\")\n",
     "    >>> df.to_csv( \"missing_wordforms.csv\", index=False)\n",
     "    '''\n",
+    "    \n",
+    "    print('Beware: finding missing wordforms in a lexicon can take a long time');\n",
     "    \n",
     "    # LEXICON: get a lemmata list to work with\n",
     "    df_lexicon = search_lexicon_alllemmata(lexicon, pos)\n",
@@ -785,11 +796,11 @@
     "    elif resource_type==\"corpus\":\n",
     "        if resource_name in AVAILABLE_CORPORA and resource_name != \"nederlab\":\n",
     "            return _corpus_metadata_blacklab(resource_name)\n",
-    "        elif corpus_name==\"nederlab\":\n",
+    "        elif resource_name==\"nederlab\":\n",
     "            print(\"Corpus metadata not yet available for Nederlab\")\n",
     "            return []\n",
     "        else:\n",
-    "            ValueError(\"Unknown corpus: \" + corpus_name + \". Should be one of \" + AVAILABLE_CORPORA.keys())\n",
+    "            ValueError(\"Unknown corpus: \" + resource_name + \". Should be one of \" + AVAILABLE_CORPORA.keys())\n",
     "    else:\n",
     "        raise ValueError(\"resource_type should be 'corpus' or 'lexicon'.\")"
    ]
@@ -803,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-08T15:42:17.743540Z",
@@ -812,7 +823,7 @@
    },
    "outputs": [],
    "source": [
-    "\n",
+    "import sys\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
     "#import tkinter as tk\n",
@@ -826,6 +837,17 @@
     "DEFAULT_CORPUS = \"chn\"\n",
     "\n",
     "\n",
+    "def show_wait_indicator(message=None):\n",
+    "    \n",
+    "    print('...' + (message if message else 'Busy now') + '...', end=\"\\r\") \n",
+    "    sys.stdout.write(\"\\033[F\")\n",
+    "\n",
+    "def remove_wait_indicator():    \n",
+    "    print('                                                                    ', end=\"\\r\")\n",
+    "    sys.stdout.write(\"\\033[F\")\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "\n",
     "def create_corpus_ui():\n",
     "    '''\n",
@@ -988,7 +1010,7 @@
     "        N/A\n",
     "    '''\n",
     "    if columns is not None:\n",
-    "        df_display=df[columns]\n",
+    "        df_display = df[columns]\n",
     "    else:\n",
     "        df_display = df\n",
     "    \n",
@@ -1017,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-08T15:42:18.320576Z",
@@ -1526,14 +1548,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-07T15:51:29.957256Z",
      "start_time": "2019-02-07T15:51:29.939067Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "05245223969447b78b1ba7a7bd1852d5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Text(value='[lemma=\"boek\" & pos=\"verb\"]', description='<b>CQL query:</b>'), Dropdown(descriptio…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#from chaininglib import ui\n",
     "\n",
@@ -1558,7 +1595,15 @@
     },
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[F...Searching zeebrieven at page 1001...                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 "
+     ]
+    }
+   ],
    "source": [
     "#from chaininglib import search\n",
     "query= corpusQueryField.value\n",
@@ -1744,6 +1789,7 @@
     "lexicon=\"anw\"\n",
     "df_lexicon = search_lexicon_alllemmata(lexicon)\n",
     "## TODO: Why do double words appear?\n",
+    "display(df_lexicon)\n",
     "lexicon_set = sorted( set([w.lower() for w in df_lexicon[\"writtenForm\"]]) )\n",
     "display(lexicon_set)\n",
     "\n",
@@ -2021,6 +2067,55 @@
     "# Group by birth place\n",
     "display_df(df_corpus.groupby(\"adr_loc_plaats\").size())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Case study 10: Visualizing h-dropping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corpus_to_search=\"chn\"\n",
+    "\n",
+    "fields = get_available_metadata(\"corpus\", corpus_to_search)\n",
+    "#print(fields)\n",
+    "\n",
+    "df_corpus1 = search_corpus(r'[lemma=\"h[aeo].*\" & word=\"[aeo].*\"]', corpus_to_search, extra_fields_doc=fields[\"document\"])\n",
+    "df_corpus2 = search_corpus(r'[lemma=\"h[aeo].*\" & word=\"h[aeo].*\"]', corpus_to_search, extra_fields_doc=fields[\"document\"])\n",
+    "\n",
+    "display_df( df_corpus1)\n",
+    "display_df( df_corpus2)\n",
+    "\n",
+    "display_df( df_corpus1.groupby([\"Region\", \"Date\"]), title=\"h-dropping\", mode='chart')\n",
+    "display_df( df_corpus2.groupby([\"Region\", \"Date\"]), title=\"normal\", mode='chart')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
