_display_df to _display_single_df (rename)

--- a/Chaining search.ipynb
+++ b/Chaining search.ipynb
@@ -848,11 +848,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-12T10:57:33.470767Z",
-     "start_time": "2019-02-12T10:57:33.266830Z"
+     "end_time": "2019-02-12T13:04:33.641426Z",
+     "start_time": "2019-02-12T13:04:33.448454Z"
     }
    },
    "outputs": [],
@@ -1051,12 +1051,12 @@
     "        for n,query in enumerate(dfs):\n",
     "            df = dfs[query]\n",
     "            if not df.empty:\n",
-    "                _display_df(df, labels[n], mode)\n",
+    "                _display_single_df(df, labels[n], mode)\n",
     "    else:\n",
-    "        _display_df(dfs, labels, mode)\n",
+    "        _display_single_df(dfs, labels, mode)\n",
     "\n",
     "\n",
-    "def _display_df(df_column, label, mode):\n",
+    "def _display_single_df(df_column, label, mode):\n",
     "    \n",
     "    # chart mode\n",
     "    if mode == 'chart':\n",
@@ -2174,7 +2174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
