Finalized new API

--- a/Chaining search.ipynb
+++ b/Chaining search.ipynb
@@ -69,7 +69,7 @@
     "#from chaininglib import search\n",
     "query= corpusQueryField.value\n",
     "corpus_name = corpusField.value\n",
-    "df_corpus = corpus(corpus_name).pattern(query).results()\n",
+    "df_corpus = create_corpus(corpus_name).pattern(query).results()\n",
     "#df_corpus = load_dataframe('mijn_resultaten.csv')\n",
     "display_df(df_corpus, labels=\"Results\")\n",
     "\n"
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-13T16:38:26.757646Z",
@@ -99,22 +99,7 @@
     },
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79eca06dbe0d4402a062f4639082552d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(Text(value='boek', description='<b>Word:</b>'), Dropdown(description='<b>Lexicon:</b>', index=2…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from chaininglib.ui import create_lexicon_ui\n",
     "\n",
@@ -131,38 +116,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-13T16:38:28.137836Z",
      "start_time": "2019-02-13T16:38:28.064277Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "must be str, not function",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-97fc85e96e5a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mlexicon_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlexiconField\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# USER: can replace this by own custom query\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mquery\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlexicon_query\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msearch_word\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpos\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;34m''\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlexicon\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlexicon\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mdf_lexicon\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlexicon\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlexicon_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpattern\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresults\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/git/chaining-search/chaininglib/queries.py\u001b[0m in \u001b[0;36mlexicon_query\u001b[0;34m(word, pos, lexicon)\u001b[0m\n\u001b[1;32m    318\u001b[0m         \"\"\"\n\u001b[1;32m    319\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 320\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Lexicon \"\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mlexicon\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\" unknown!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    321\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    322\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mquery\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: must be str, not function"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from chaininglib.queries import lexicon_query\n",
     "from chaininglib.search.LexiconQuery import *\n",
     "from chaininglib.ui import display_df\n",
     "\n",
     "search_word = searchWordField.value\n",
     "lexicon_name = lexiconField.value\n",
     "# USER: can replace this by own custom query\n",
-    "query = lexicon_query(word=search_word, pos= '', lexicon=lexicon)\n",
-    "\n",
-    "df_lexicon = create_lexicon(lexicon_name).pattern(query).results()\n",
+    "df_lexicon = create_lexicon(lexicon_name).lemma(search_word).results()\n",
     "display_df(df_lexicon)\n",
     "#df_columns_list = list(df_lexicon.columns.values)\n",
     "#df_lexicon_in_columns = df_lexicon[df_columns_list]\n",
@@ -197,14 +166,14 @@
     "\n",
     "# Word 1: puur\n",
     "word1= \"puur\"\n",
-    "cq1 = corpus(\"chn\").pattern(r'[word=\"' + word1 + r'\"][pos=\"verb\"]')\n",
+    "cq1 = create_corpus(\"chn\").pattern(r'[word=\"' + word1 + r'\"][pos=\"verb\"]')\n",
     "df_corpus1 = cq1.results()\n",
     "display(HTML('<b>' + word1 + '</b>'))\n",
     "display_df(df_corpus1)\n",
     "\n",
     "# Word 2: zuiver\n",
     "word2 = \"zuiver\"\n",
-    "cq2 = corpus(\"chn\").pattern(r'[word=\"' + word2 + r'\"][pos=\"verb\"]')\n",
+    "cq2 = create_corpus(\"chn\").pattern(r'[word=\"' + word2 + r'\"][pos=\"verb\"]')\n",
     "df_corpus2 = cq2.results()\n",
     "display(HTML('<b>' + word2 + '</b>'))\n",
     "display_df(df_corpus2)\n",
@@ -240,16 +209,15 @@
    "source": [
     "from chaininglib.search.CorpusQuery import *\n",
     "from chaininglib.search.LexiconQuery import *\n",
-    "from chaininglib.queries import lexicon_query, corpus_query_lemma\n",
+    "from chaininglib.queries import corpus_query_lemma\n",
     "from chaininglib.process.lexicon import diamant_get_synonyms\n",
     "from chaininglib.ui import display_df\n",
     "\n",
     "search_word = \"boek\"\n",
-    "lexicon = \"diamant\"\n",
+    "lexicon_name = \"diamant\"\n",
     "corpus= \"gysseling\"\n",
     "\n",
     "# First, lookup synonyms in DiaMaNT\n",
-    "query = lexicon_query(word=search_word, pos= '', lexicon=lexicon)\n",
     "lq = create_lexicon(lexicon_name).lemma(search_word)\n",
     "df_lexicon = lq.results()\n",
     "syns = diamant_get_synonyms(df_lexicon) \n",
@@ -292,7 +260,6 @@
    "source": [
     "from chaininglib.search.CorpusQuery import *\n",
     "from chaininglib.search.LexiconQuery import *\n",
-    "from chaininglib.queries import lexicon_query\n",
     "from chaininglib.process.general import df_filter\n",
     "from chaininglib.ui import display_df\n",
     "\n",
@@ -306,7 +273,6 @@
     "display_df(df_corpus)\n",
     "\n",
     "# LEXICON: get adjectives the lemma of which does not end with -e\n",
-    "query=lexicon_query('^g(.+)[^e]$', 'ADJ', lexicon_to_search)\n",
     "lq = create_lexicon(lexicon_to_search).lemma('^g(.+)[^e]$').pos('ADJ')\n",
     "df_lexicon = lq.results()\n",
     "display_df(df_lexicon)\n",
@@ -343,7 +309,6 @@
    },
    "outputs": [],
    "source": [
-    "from chaininglib.queries import lexicon_query\n",
     "from chaininglib.ui import display_df\n",
     "from chaininglib.search.CorpusQuery import *\n",
     "from chaininglib.search.LexiconQuery import *\n",
@@ -358,7 +323,6 @@
     "lemma_to_look_for=\"denken\"\n",
     "\n",
     "# LEXICON: Search for the inflected forms of a lemma in a morphosyntactic lexicon\n",
-    "query=lexicon_query(lemma_to_look_for, None, lexicon_to_search)\n",
     "lq = create_lexicon(lexicon_to_search).lemma(lemma_to_look_for)\n",
     "df_lexicon = lq.results()\n",
     "display_df(df_lexicon)\n",
@@ -393,7 +357,6 @@
    },
    "outputs": [],
    "source": [
-    "from chaininglib.queries import lexicon_query\n",
     "from chaininglib.process.general import df_filter, get_rank_diff, get_frequency_list\n",
     "from chaininglib.ui import display_df\n",
     "\n",
@@ -484,8 +447,7 @@
    },
    "outputs": [],
    "source": [
-    "from chaininglib.search.corpus import corpus_options\n",
-    "from chaininglib.queries import lexicon_query, corpus_query_wordform\n",
+    "from chaininglib.queries import corpus_query_wordform\n",
     "from chaininglib.ui import display_df\n",
     "from chaininglib.process.corpus import get_tagger\n",
     "from chaininglib.search.CorpusQuery import *\n",
@@ -501,7 +463,6 @@
     "some_word = \"loop\"\n",
     "\n",
     "# get the paradigm of the lemma our word is a part of\n",
-    "query = lexicon_query(some_word, pos=None, lexicon=base_lexicon)\n",
     "l = create_lexicon(base_lexicon).lemma(some_word)\n",
     "df_paradigm = l.results()\n",
     "display_df(df_paradigm)\n",
@@ -509,7 +470,6 @@
     "# gather some pattern including our word, out of an annotated corpus\n",
     "# here: DET + ADJ + 'loop'\n",
     "corpus_query = corpus_query_wordform(some_word)\n",
-    "corpus_opts = corpus_options( detailed_context=True )\n",
     "\n",
     "c1 = create_corpus(corpus_to_search1).pattern(corpus_query).detailed_context(True)\n",
     "c2 = create_corpus(corpus_to_search2).pattern(corpus_query).detailed_context(True)\n",
@@ -556,10 +516,8 @@
    },
    "outputs": [],
    "source": [
-    "from chaininglib.search.corpus import corpus_options\n",
     "from chaininglib.search.general import get_available_metadata\n",
     "from chaininglib.process.general import df_filter\n",
-    "from chaininglib.queries import lexicon_query, corpus_query_wordform\n",
     "from chaininglib.ui import display_df\n",
     "from chaininglib.search.CorpusQuery import *\n",
     "\n",
@@ -569,7 +527,6 @@
     "# Request all metadata fields from corpus\n",
     "fields = get_available_metadata(corpus_name)\n",
     "# Perform query and ask all metadata\n",
-    "corpus_opts = corpus_options(extra_fields_doc=fields[\"document\"])\n",
     "c = create_corpus(corpus_name).pattern(query).extra_fields_doc(fields[\"document\"]) #search_corpus(query, corpus_name, corpus_opts)\n",
     "df_corpus = c.results()\n",
     "\n",
@@ -606,18 +563,17 @@
    },
    "outputs": [],
    "source": [
-    "from chaininglib.search.corpus import search_corpus, corpus_options\n",
+    "from chaininglib.search.CorpusQuery import *\n",
     "from chaininglib.search.general import get_available_metadata\n",
     "from chaininglib.ui import display_df\n",
     "\n",
     "corpus_to_search=\"chn\"\n",
     "\n",
     "fields = get_available_metadata(corpus_to_search)\n",
-    "#print(fields)\n",
-    "corpus_opts = corpus_options(extra_fields_doc=fields[\"document\"])\n",
     "\n",
-    "df_corpus1 = search_corpus(r'[lemma=\"h[aeo].*\" & word=\"[aeo].*\"]', corpus_to_search, corpus_opts)\n",
-    "df_corpus2 = search_corpus(r'[lemma=\"h[aeo].*\" & word=\"h[aeo].*\"]', corpus_to_search, corpus_opts)\n",
+    "\n",
+    "df_corpus1 = create_corpus(corpus_to_search).pattern(r'[lemma=\"h[aeo].*\" & word=\"[aeo].*\"]').extra_fields_doc(fields[\"document\"]).results()\n",
+    "df_corpus1 = create_corpus(corpus_to_search).pattern(r'[lemma=\"h[aeo].*\" & word=\"h[aeo].*\"]').extra_fields_doc(fields[\"document\"]).results()\n",
     "\n",
     "display_df( df_corpus1)\n",
     "display_df( df_corpus2)\n",
@@ -650,7 +606,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
