started work on blacklab support

--- a/Chaining search.ipynb
+++ b/Chaining search.ipynb
@@ -32,8 +32,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-13T16:35:09.438868Z",
-     "start_time": "2019-02-13T16:35:09.084255Z"
+     "end_time": "2019-02-18T15:54:55.508244Z",
+     "start_time": "2019-02-18T15:54:55.297822Z"
     }
    },
    "outputs": [],
@@ -56,8 +56,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-13T16:35:10.974233Z",
-     "start_time": "2019-02-13T16:35:10.456436Z"
+     "end_time": "2019-02-18T16:35:20.155128Z",
+     "start_time": "2019-02-18T16:35:19.420420Z"
     },
     "scrolled": false
    },
@@ -69,7 +69,7 @@
     "#from chaininglib import search\n",
     "query= corpusQueryField.value\n",
     "corpus_name = corpusField.value\n",
-    "df_corpus = create_corpus(corpus_name).pattern(query).results()\n",
+    "df_corpus = create_corpus(corpus_name).pattern(query).method(\"blacklab\").results()\n",
     "#df_corpus = load_dataframe('mijn_resultaten.csv')\n",
     "display_df(df_corpus, labels=\"Results\")\n",
     "\n"
@@ -152,8 +152,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-13T12:13:20.355270Z",
-     "start_time": "2019-02-13T12:13:20.069025Z"
+     "end_time": "2019-02-15T16:25:46.948392Z",
+     "start_time": "2019-02-15T16:25:45.392228Z"
     }
    },
    "outputs": [],
@@ -199,8 +199,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-13T12:15:13.415933Z",
-     "start_time": "2019-02-13T12:15:02.452257Z"
+     "end_time": "2019-02-15T16:26:20.814487Z",
+     "start_time": "2019-02-15T16:26:10.020960Z"
     }
    },
    "outputs": [],
@@ -251,8 +251,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-13T12:27:42.929839Z",
-     "start_time": "2019-02-13T12:27:34.431120Z"
+     "end_time": "2019-02-15T16:30:47.240012Z",
+     "start_time": "2019-02-15T16:30:38.740615Z"
     }
    },
    "outputs": [],
@@ -269,18 +269,15 @@
     "print('Get occurences of attributive adjectives not ending with -e')\n",
     "cq = create_corpus(corpus_to_search).pattern(r'[lemma=\"de|het\"][word=\"^g(.+)[^e]$\" & pos=\"ADJ\"][pos=\"NOUN\"]')\n",
     "df_corpus = cq.results()\n",
-    "display_df(df_corpus)\n",
     "\n",
     "# LEXICON: get adjectives the lemma of which does not end with -e\n",
     "lq = create_lexicon(lexicon_to_search).lemma('^g(.+)[^e]$').pos('ADJ')\n",
     "df_lexicon = lq.results()\n",
-    "display_df(df_lexicon)\n",
     "\n",
     "# LEXICON: get adjectives having a final -e in definite attributive use\n",
     "print('Filtering lexicon results')\n",
     "final_e_condition = df_filter(df_lexicon[\"wordform\"], 'e$')\n",
     "df_lexicon_form_e = df_lexicon[ final_e_condition ]\n",
-    "display_df(df_lexicon_form_e)\n",
     "\n",
     "# RESULT: get the records out of our first list in which the -e-less-adjectives match the lemma form of our last list\n",
     "print('List of attributive adjectives not ending with -e even though they should have a final -e:')\n",
@@ -507,8 +504,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-13T14:06:04.127376Z",
-     "start_time": "2019-02-13T14:05:46.970934Z"
+     "end_time": "2019-02-15T16:33:59.144779Z",
+     "start_time": "2019-02-15T16:33:58.538033Z"
     }
    },
    "outputs": [],
@@ -520,7 +517,7 @@
     "\n",
     "\n",
     "corpus_name=\"zeebrieven\"\n",
-    "query=r'[lemma=\"dat\"]'\n",
+    "query=r'[lemma=\"boek\"]'\n",
     "# Request all metadata fields from corpus\n",
     "fields = get_available_metadata(corpus_name)\n",
     "# Perform query and ask all metadata\n",
@@ -603,7 +600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
